--- a/admin/index.html
+++ b/admin/index.html
@@ -12,6 +12,13 @@
             box-sizing: border-box;
         }
 
+        /* FullCalendar Override */
+        .fc-event {
+            cursor: pointer;
+        }
+    </style>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
+    <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Microsoft JhengHei', 'Segoe UI', Roboto, sans-serif;
             background: #EDEDE9;
@@ -394,7 +401,7 @@
             <button class="tab-btn active" data-tab="bookingsTab">預約列表</button>
             <button class="tab-btn" data-tab="calendarTab">行事曆</button>
             <button class="tab-btn" data-tab="overviewTab">預約概覽</button>
-            <button class="tab-btn" data-tab="settingsTab">設定</button>
+            <button class="tab-btn" data-tab="settingsTab">系統設定</button>
             <button class="tab-btn" data-tab="instructionsTab">預約須知</button>
             <button class="tab-btn" data-tab="itemsTab">課程 / 場地項目</button>
         </div>
@@ -1079,20 +1086,23 @@
         // 401 Interceptor wrapper
         async function authenticatedFetch(url, options = {}) {
             const token = localStorage.getItem('adminToken');
+            if (!token && !url.includes('/login')) {
+                throw new Error('No token found');
+            }
+
             const headers = { ...options.headers };
             if (token) {
                 headers['Authorization'] = `Bearer ${token}`;
             }
-            options.headers = headers;
 
-            const response = await fetch(url, options);
+            const response = await fetch(url, { ...options, headers });
+
             if (response.status === 401) {
-                // Token expired or invalid
-                logout(); // This will show the login modal
-                // Only alert if we were previously logged in (avoid loop on initial load)
-                if (token) alert('登入已過期，請重新登入。');
-                return response; // Caller handles status, but we've triggered logout
+                // Token Expired or Invalid
+                logout();
+                throw new Error('Session expired');
             }
+
             return response;
         }
 
@@ -1163,20 +1173,31 @@
                 const totalPeopleValue = Number.isFinite(Number(booking.totalPeople)) && Number(booking.totalPeople) > 0
                     ? Number(booking.totalPeople)
                     : 1;
+                const statusBadge = `<span class="status-chip status-${booking.status}">${statusMap[booking.status] || booking.status}</span>`;
+                const notes = booking.adminNotes ? `<div style="font-size:0.85em;color:#666;margin-top:4px;">📝 ${escapeHtml(booking.adminNotes)}</div>` : '';
+
                 row.innerHTML = `
-                    <td>${escapeHtml(booking.id)}</td>
-                    <td>${escapeHtml(booking.customerName)}<br><small>${escapeHtml(booking.email)}<br>${escapeHtml(booking.phone)}</small></td>
-                    <td>${itemsHtml || '—'}</td>
-                    <td>${escapeHtml(String(totalPeopleValue))}</td>
-                    <td>HK$${Number(booking.totalPrice || 0).toFixed(2)}</td>
-                    <td><span class="status-chip status-${booking.status}">${escapeHtml(booking.status)}</span></td>
+                    <td>${escapeHtml(booking.id.slice(0, 8))}...</td>
+                    <td>${formatDateTime(new Date(booking.createdAt))}</td>
                     <td>
-                        <button class="btn btn-secondary" onclick="updateBookingStatus('${booking.id}','confirmed')">確認</button>
-                        <button class="btn btn-secondary" onclick="updateBookingStatus('${booking.id}','pending')">待處理</button>
-                        <button class="btn btn-secondary" onclick="updateBookingStatus('${booking.id}','cancelled')">取消</button>
-                        <a class="btn btn-secondary" href="${API_BASE_URL}/bookings/${booking.id}/ics" target="_blank" rel="noopener">下載日曆</a>
-                        <button class="btn btn-danger" onclick="deleteRentalBooking('${booking.id}')">刪除</button>
-                        <button class="btn btn-secondary" onclick="openNotesModal('${booking.id}', '${escapeHtml(booking.adminNotes || '')}')">✏️</button>
+                        <div>${escapeHtml(booking.customerName)}</div>
+                        <div style="font-size:0.9em;color:#666;">${escapeHtml(booking.phone)}</div>
+                    </td>
+                    <td>
+                        ${itemsHtml || '—'}
+                        ${notes}
+                    </td>
+                    <td>HK$${Number(booking.totalPrice || 0).toFixed(2)}</td>
+                    <td>${statusBadge}</td>
+                    <td>
+                        <div class="action-buttons">
+                            <button class="btn btn-sm btn-secondary" onclick="updateBookingStatus('${booking.id}', 'confirmed')">確認</button>
+                            <button class="btn btn-sm btn-secondary" onclick="updateBookingStatus('${booking.id}', 'pending')">待處理</button>
+                            <button class="btn btn-sm btn-danger" onclick="updateBookingStatus('${booking.id}', 'cancelled')">取消</button>
+                            <a class="btn btn-sm btn-secondary" href="${API_BASE_URL}/bookings/${booking.id}/ics" target="_blank" rel="noopener">下載日曆</a>
+                            <button class="btn btn-sm btn-danger" onclick="deleteRentalBooking('${booking.id}')">刪除</button>
+                            <button class="btn btn-sm btn-secondary" onclick="editAdminNote('${booking.id}', 'rental', '${booking.status}', '${escapeHtml(booking.adminNotes || '').replace(/'/g, "\\'")}')">備註</button>
+                        </div>
                     </td>
                 `;
                 tbody.appendChild(row);
@@ -1215,24 +1236,41 @@
                 tbody.appendChild(row);
                 return;
             }
-
+            const statusMap = {
+                'pending': '待處理',
+                'confirmed': '已確認',
+                'cancelled': '已取消'
+            };
             bookings.forEach(booking => {
                 const row = document.createElement('tr');
                 const startLabel = booking.classStartTime ? formatOverviewDateTime(booking.classStartTime) : '';
                 const endLabel = booking.classEndTime ? formatOverviewTime(booking.classEndTime) : '';
                 const scheduleDisplay = endLabel ? `${startLabel} - ${endLabel}` : startLabel;
                 const locationHtml = booking.classLocation ? `<br><small>${escapeHtml(booking.classLocation)}</small>` : '';
+                const statusBadge = `<span class="status-chip status-${booking.status}">${statusMap[booking.status] || booking.status}</span>`;
+                const notes = booking.adminNotes ? `<div style="font-size:0.85em;color:#666;margin-top:4px;">📝 ${escapeHtml(booking.adminNotes)}</div>` : '';
+
                 row.innerHTML = `
-                    <td>${escapeHtml(booking.id)}</td>
-                    <td>${escapeHtml(booking.className || '—')}<br><small>${escapeHtml(scheduleDisplay || '')}</small>${locationHtml}</td>
-                    <td>${escapeHtml(booking.customerName)}<br><small>${escapeHtml(booking.email)}<br>${escapeHtml(booking.phone)}</small></td>
-                    <td>${escapeHtml(String(booking.peopleCount || 0))}</td>
-                    <td><span class="status-chip status-${booking.status}">${escapeHtml(booking.status)}</span></td>
+                    <td>${escapeHtml(booking.id.slice(0, 8))}...</td>
+                    <td>${formatDateTime(new Date(booking.createdAt))}</td>
                     <td>
-                        <button class="btn btn-secondary" onclick="updateClassBookingStatus('${booking.id}','confirmed')">確認</button>
-                        <button class="btn btn-secondary" onclick="updateClassBookingStatus('${booking.id}','pending')">待處理</button>
-                        <button class="btn btn-secondary" onclick="updateClassBookingStatus('${booking.id}','cancelled')">取消</button>
-                        <button class="btn btn-danger" onclick="deleteClassBooking('${booking.id}')">刪除</button>
+                        <div>${escapeHtml(booking.customerName)}</div>
+                        <div style="font-size:0.9em;color:#666;">${escapeHtml(booking.email)}</div>
+                    </td>
+                    <td>${escapeHtml(booking.phone)}</td>
+                    <td>${escapeHtml(String(booking.peopleCount || 0))}</td>
+                    <td>
+                         ${statusBadge}
+                         ${notes}
+                    </td>
+                    <td>
+                         <div class="action-buttons">
+                            <button class="btn btn-sm btn-secondary" onclick="updateClassBookingStatus('${booking.id}', 'confirmed')">確認</button>
+                            <button class="btn btn-sm btn-secondary" onclick="updateClassBookingStatus('${booking.id}', 'pending')">待處理</button>
+                            <button class="btn btn-sm btn-danger" onclick="updateClassBookingStatus('${booking.id}', 'cancelled')">取消</button>
+                            <button class="btn btn-sm btn-danger" onclick="deleteClassBooking('${booking.id}')">刪除</button>
+                            <button class="btn btn-sm btn-secondary" onclick="editAdminNote('${booking.id}', 'class', '${booking.status}', '${escapeHtml(booking.adminNotes || '').replace(/'/g, "\\'")}')">備註</button>
+                        </div>
                     </td>
                 `;
                 tbody.appendChild(row);
@@ -2198,13 +2236,20 @@
             }
         }
 
-        let calendar;
+        // --- New Features ---
 
+        function exportCsv() {
+            const token = localStorage.getItem('adminToken');
+            window.open(`${API_BASE_URL}/admin/reports/csv?token=${token}`, '_blank');
+        }
+
+        let calendar;
         function initCalendar() {
             const calendarEl = document.getElementById('calendar');
+            if (!calendarEl) return;
+
             calendar = new FullCalendar.Calendar(calendarEl, {
-                initialView: 'dayGridMonth',
-                locale: 'zh-tw',
+                initialView: 'timeGridWeek',
                 headerToolbar: {
                     left: 'prev,next today',
                     center: 'title',
